src/generated/java/org/tihrc/microj/antlr/MicroJParser.java
// Generated from MicroJ.g4 by ANTLR 4.13.1
package org.tihrc.microj.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MicroJParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRIPLE_DOUBLE_STRING=1, TRIPLE_SINGLE_STRING=2, SINGLE_DOUBLE_STRING=3, 
		SINGLE_SINGLE_STRING=4, CLASS=5, FOR=6, IN=7, NOT_IN=8, IF=9, ELIF=10, 
		ELSE=11, WHILE=12, DEF=13, LAMBDA=14, RETURN=15, IMPORT=16, FROM=17, AS=18, 
		BREAK=19, CONTINUE=20, TRY=21, EXCEPT=22, FINALLY=23, RAISE=24, PASS=25, 
		WITH=26, DEL=27, ASSERT=28, GLOBAL=29, NONLOCAL=30, YIELD=31, AND=32, 
		OR=33, NOT=34, DOT=35, COLON=36, LBRACKET=37, RBRACKET=38, LBRACE=39, 
		RBRACE=40, AT=41, PLUS=42, MINUS=43, STAR=44, SLASH=45, DOUBLE_SLASH=46, 
		POW=47, PERCENT=48, EQUAL=49, EQ_EQ=50, NE=51, LT=52, GT=53, LE=54, GE=55, 
		LPAREN=56, RPAREN=57, COMMA=58, NAME=59, NUMBER=60, FLOAT=61, IMAG=62, 
		NEWLINE=63, WS=64, COMMENT=65, INDENT=66, DEDENT=67;
	public static final int
		RULE_file = 0, RULE_statement = 1, RULE_suite = 2, RULE_simpleStatement = 3, 
		RULE_funcDef = 4, RULE_classDef = 5, RULE_baseList = 6, RULE_decorator = 7, 
		RULE_paramList = 8, RULE_param = 9, RULE_returnStatement = 10, RULE_globalStatement = 11, 
		RULE_nonlocalStatement = 12, RULE_yieldStatement = 13, RULE_breakStatement = 14, 
		RULE_continueStatement = 15, RULE_tryStatement = 16, RULE_withStatement = 17, 
		RULE_delStatement = 18, RULE_assertStatement = 19, RULE_exceptClause = 20, 
		RULE_raiseStatement = 21, RULE_ifStatement = 22, RULE_whileStatement = 23, 
		RULE_forStatement = 24, RULE_block = 25, RULE_assignment = 26, RULE_expr = 27, 
		RULE_or_expr = 28, RULE_and_expr = 29, RULE_not_expr = 30, RULE_comparison = 31, 
		RULE_add_expr = 32, RULE_mul_expr = 33, RULE_unary_expr = 34, RULE_power = 35, 
		RULE_compareOp = 36, RULE_addOp = 37, RULE_mulOp = 38, RULE_compFor = 39, 
		RULE_compIf = 40, RULE_compIter = 41, RULE_target = 42, RULE_targetList = 43, 
		RULE_stringLit = 44, RULE_atom = 45, RULE_exprList = 46, RULE_dictList = 47, 
		RULE_dictItem = 48, RULE_argList = 49, RULE_arg = 50, RULE_importStatement = 51, 
		RULE_importNames = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "statement", "suite", "simpleStatement", "funcDef", "classDef", 
			"baseList", "decorator", "paramList", "param", "returnStatement", "globalStatement", 
			"nonlocalStatement", "yieldStatement", "breakStatement", "continueStatement", 
			"tryStatement", "withStatement", "delStatement", "assertStatement", "exceptClause", 
			"raiseStatement", "ifStatement", "whileStatement", "forStatement", "block", 
			"assignment", "expr", "or_expr", "and_expr", "not_expr", "comparison", 
			"add_expr", "mul_expr", "unary_expr", "power", "compareOp", "addOp", 
			"mulOp", "compFor", "compIf", "compIter", "target", "targetList", "stringLit", 
			"atom", "exprList", "dictList", "dictItem", "argList", "arg", "importStatement", 
			"importNames"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'class'", "'for'", "'in'", "'not in'", 
			"'if'", "'elif'", "'else'", "'while'", "'def'", "'lambda'", "'return'", 
			"'import'", "'from'", "'as'", "'break'", "'continue'", "'try'", "'except'", 
			"'finally'", "'raise'", "'pass'", "'with'", "'del'", "'assert'", "'global'", 
			"'nonlocal'", "'yield'", "'and'", "'or'", "'not'", "'.'", "':'", "'['", 
			"']'", "'{'", "'}'", "'@'", "'+'", "'-'", "'*'", "'/'", "'//'", "'**'", 
			"'%'", "'='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'('", "')'", 
			"','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRIPLE_DOUBLE_STRING", "TRIPLE_SINGLE_STRING", "SINGLE_DOUBLE_STRING", 
			"SINGLE_SINGLE_STRING", "CLASS", "FOR", "IN", "NOT_IN", "IF", "ELIF", 
			"ELSE", "WHILE", "DEF", "LAMBDA", "RETURN", "IMPORT", "FROM", "AS", "BREAK", 
			"CONTINUE", "TRY", "EXCEPT", "FINALLY", "RAISE", "PASS", "WITH", "DEL", 
			"ASSERT", "GLOBAL", "NONLOCAL", "YIELD", "AND", "OR", "NOT", "DOT", "COLON", 
			"LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "AT", "PLUS", "MINUS", "STAR", 
			"SLASH", "DOUBLE_SLASH", "POW", "PERCENT", "EQUAL", "EQ_EQ", "NE", "LT", 
			"GT", "LE", "GE", "LPAREN", "RPAREN", "COMMA", "NAME", "NUMBER", "FLOAT", 
			"IMAG", "NEWLINE", "WS", "COMMENT", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MicroJ.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MicroJParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MicroJParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(MicroJParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MicroJParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroJVisitor ) return ((MicroJVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -504387056445951362L) != 0)) {
				{
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(106);
					match(NEWLINE);
					}
					break;
				case TRIPLE_DOUBLE_STRING:
				case TRIPLE_SINGLE_STRING:
				case SINGLE_DOUBLE_STRING:
				case SINGLE_SINGLE_STRING:
				case CLASS:
				case FOR:
				case IF:
				case WHILE:
				case DEF:
				case LAMBDA:
				case RETURN:
				case IMPORT:
				case FROM:
				case BREAK:
				case CONTINUE:
				case TRY:
				case RAISE:
				case PASS:
				case WITH:
				case DEL:
				case ASSERT:
				case GLOBAL:
				case NONLOCAL:
				case YIELD:
				case NOT:
				case LBRACKET:
				case LBRACE:
				case AT:
				case PLUS:
				case MINUS:
				case LPAREN:
				case NAME:
				case NUMBER:
				case FLOAT:
				case IMAG:
					{
					setState(107);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public TryStatementContext tryStatement() {
			return getRuleContext(TryStatementContext.class,0);
		}
		public RaiseStatementContext raiseStatement() {
			return getRuleContext(RaiseStatementContext.class,0);
		}
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public WithStatementContext withStatement() {
			return getRuleContext(WithStatementContext.class,0);
		}
		public DelStatementContext delStatement() {
			return getRuleContext(DelStatementContext.class,0);
		}
		public AssertStatementContext assertStatement() {
			return getRuleContext(AssertStatementContext.class,0);
		}
		public GlobalStatementContext globalStatement() {
			return getRuleContext(GlobalStatementContext.class,0);
		}
		public NonlocalStatementContext nonlocalStatement() {
			return getRuleContext(NonlocalStatementContext.class,0);
		}
		public YieldStatementContext yieldStatement() {
			return getRuleContext(YieldStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroJVisitor ) return ((MicroJVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRIPLE_DOUBLE_STRING:
			case TRIPLE_SINGLE_STRING:
			case SINGLE_DOUBLE_STRING:
			case SINGLE_SINGLE_STRING:
			case LAMBDA:
			case RETURN:
			case BREAK:
			case CONTINUE:
			case PASS:
			case NOT:
			case LBRACKET:
			case LBRACE:
			case PLUS:
			case MINUS:
			case LPAREN:
			case NAME:
			case NUMBER:
			case FLOAT:
			case IMAG:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				simpleStatement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				ifStatement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				whileStatement();
				}
				break;
			case DEF:
			case AT:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				funcDef();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				forStatement();
				}
				break;
			case IMPORT:
			case FROM:
				enterOuterAlt(_localctx, 6);
				{
				setState(120);
				importStatement();
				}
				break;
			case TRY:
				enterOuterAlt(_localctx, 7);
				{
				setState(121);
				tryStatement();
				}
				break;
			case RAISE:
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				raiseStatement();
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 9);
				{
				setState(123);
				classDef();
				}
				break;
			case WITH:
				enterOuterAlt(_localctx, 10);
				{
				setState(124);
				withStatement();
				}
				break;
			case DEL:
				enterOuterAlt(_localctx, 11);
				{
				setState(125);
				delStatement();
				}
				break;
			case ASSERT:
				enterOuterAlt(_localctx, 12);
				{
				setState(126);
				assertStatement();
				}
				break;
			case GLOBAL:
				enterOuterAlt(_localctx, 13);
				{
				setState(127);
				globalStatement();
				}
				break;
			case NONLOCAL:
				enterOuterAlt(_localctx, 14);
				{
				setState(128);
				nonlocalStatement();
				}
				break;
			case YIELD:
				enterOuterAlt(_localctx, 15);
				{
				setState(129);
				yieldStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SuiteContext extends ParserRuleContext {
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MicroJParser.NEWLINE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public SuiteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_suite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).enterSuite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).exitSuite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroJVisitor ) return ((MicroJVisitor<? extends T>)visitor).visitSuite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuiteContext suite() throws RecognitionException {
		SuiteContext _localctx = new SuiteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_suite);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRIPLE_DOUBLE_STRING:
			case TRIPLE_SINGLE_STRING:
			case SINGLE_DOUBLE_STRING:
			case SINGLE_SINGLE_STRING:
			case LAMBDA:
			case RETURN:
			case BREAK:
			case CONTINUE:
			case PASS:
			case NOT:
			case LBRACKET:
			case LBRACE:
			case PLUS:
			case MINUS:
			case LPAREN:
			case NAME:
			case NUMBER:
			case FLOAT:
			case IMAG:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				simpleStatement();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(NEWLINE);
				setState(134);
				block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStatementContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(MicroJParser.NEWLINE, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public TerminalNode PASS() { return getToken(MicroJParser.PASS, 0); }
		public SimpleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).exitSimpleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroJVisitor ) return ((MicroJVisitor<? extends T>)visitor).visitSimpleStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleStatementContext simpleStatement() throws RecognitionException {
		SimpleStatementContext _localctx = new SimpleStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simpleStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(137);
				assignment();
				}
				break;
			case 2:
				{
				setState(138);
				expr();
				}
				break;
			case 3:
				{
				setState(139);
				returnStatement();
				}
				break;
			case 4:
				{
				setState(140);
				breakStatement();
				}
				break;
			case 5:
				{
				setState(141);
				continueStatement();
				}
				break;
			case 6:
				{
				setState(142);
				match(PASS);
				}
				break;
			}
			setState(145);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(MicroJParser.DEF, 0); }
		public TerminalNode NAME() { return getToken(MicroJParser.NAME, 0); }
		public TerminalNode LPAREN() { return getToken(MicroJParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MicroJParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(MicroJParser.COLON, 0); }
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public List<DecoratorContext> decorator() {
			return getRuleContexts(DecoratorContext.class);
		}
		public DecoratorContext decorator(int i) {
			return getRuleContext(DecoratorContext.class,i);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroJVisitor ) return ((MicroJVisitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(147);
				decorator();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			match(DEF);
			setState(154);
			match(NAME);
			setState(155);
			match(LPAREN);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 576619081977823232L) != 0)) {
				{
				setState(156);
				paramList();
				}
			}

			setState(159);
			match(RPAREN);
			setState(160);
			match(COLON);
			setState(161);
			suite();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDefContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(MicroJParser.CLASS, 0); }
		public TerminalNode NAME() { return getToken(MicroJParser.NAME, 0); }
		public TerminalNode COLON() { return getToken(MicroJParser.COLON, 0); }
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(MicroJParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MicroJParser.RPAREN, 0); }
		public BaseListContext baseList() {
			return getRuleContext(BaseListContext.class,0);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).enterClassDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroJListener ) ((MicroJListener)listener).exitClassDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroJVisitor ) return ((MicroJVisitor<? extends T>)visitor).visitClassDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(CLASS);
			setState(164);
			match(NAME);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(165);
				match(LPAREN);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NAME) {
					{
					setState(166);
					baseList();
					}
				}

				setState(169);
				match(RPAREN);
				}
			}

			setState(172);
			match(COLON);
			setState(173);
			suite();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
